--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "^3.6.0",
-    "@capacitor/app": "^1.1.1",
+    "@capacitor/app": "1.1.1",
     "@capacitor/browser": "^1.0.7",
-    "@capacitor/core": "^3.6.0",
+    "@capacitor/core": "3.6.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "^3.6.0",
     "@capacitor/keyboard": "1.2.3",
@@ -70,7 +70,7 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "@capacitor/cli": "^3.6.0",
+    "@capacitor/cli": "3.6.0",
     "@ionic/lab": "3.2.13",
     "react-scripts": "5.0.1"
   }
