--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "axios": "^0.27.2",
     "firebase": "^9.8.4",
     "ionicons": "^5.4.0",
+    "pullstate": "^1.24.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "reselect": "^4.1.6",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
